// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToDo Component Renders renders the ToDo Component 1`] = `
<div
  className="Body"
>
  <div
    className="todo-list"
  >
    <ul
      id="todo-holder"
    />
    <input
      id="todo-text-field"
      onChange={[Function]}
      placeholder="Write your TODO"
      type="text"
    />
    <input
      id="btn-green"
      onClick={[Function]}
      type="submit"
      value="Add"
    />
  </div>
</div>
`;

exports[`ToDo Component Renders renders the ToDoItem Component 1`] = `
<li
  className="todo-item"
>
  <div
    className="category-todo"
    style={
      Object {
        "backgroundColor": "undefined",
      }
    }
  />
  <input
    checked={false}
    className="todo-checkbox"
    label={false}
    onClick={[Function]}
    type="submit"
    value=""
  />
  <p
    className="todo-text"
  />
</li>
`;

exports[`ToDo Overview renders the whole Todo application 1`] = `
<div
  className="NoteView"
>
  <div
    className="Left-Page"
  >
    <p>
      This is your TODO for now
    </p>
    <div>
      <div
        className="NoteHolder"
      >
        <p>
          <orange>
            Categories
          </orange>
           - Select to filter your notes and add new ones!
        </p>
        <div
          className="Notes"
        >
          <div
            className="CategoryFilter"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#016D91",
                "border": "none",
              }
            }
          />
          <div
            className="CategoryFilter"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#E53F6F",
                "border": "none",
              }
            }
          />
        </div>
      </div>
    </div>
    <div
      className="Middle-Page"
    >
      <div
        className="Body"
      >
        <div
          className="todo-list"
        >
          <ul
            id="todo-holder"
          />
          <input
            id="todo-text-field"
            onChange={[Function]}
            placeholder="Write your TODO"
            type="text"
          />
          <input
            id="btn-green"
            onClick={[Function]}
            type="submit"
            value="Add"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="Right-Page"
  >
    <div
      className="CategoryCreatorHolder"
    >
      <p>
        Categories
      </p>
      <div
        className="Category"
      >
        <div
          className="CategoryColor"
          style={
            Object {
              "backgroundColor": "#016D91",
            }
          }
        />
        <div>
          <input
            className="CategoryName"
            onChange={[Function]}
            value="Other"
          />
        </div>
      </div>
      <div
        className="Category"
      >
        <div
          className="CategoryColor"
          style={
            Object {
              "backgroundColor": "#E53F6F",
            }
          }
        />
        <div>
          <input
            className="CategoryName"
            onChange={[Function]}
            value="School"
          />
        </div>
      </div>
      <div
        className="AddCategory"
      >
        <button
          className="add-button"
          onClick={[Function]}
        >
          Add
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`TodoItem instantiates properties and state properly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ToDoItem
    className="items"
    color="rgb(43, 186, 178)"
    onClick={[Function]}
    value={
        ShallowWrapper {
            "length": 1,
            Symbol(enzyme.__root__): [Circular],
            Symbol(enzyme.__unrendered__): <ToDo />,
            Symbol(enzyme.__renderer__): Object {
              "batchedUpdates": [Function],
              "getNode": [Function],
              "render": [Function],
              "simulateEvent": [Function],
              "unmount": [Function],
            },
            Symbol(enzyme.__node__): Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="todo-list"
        >
                  <ul
                            id="todo-holder"
                  >
                            
                  </ul>
                  <input
                            id="todo-text-field"
                            onChange={[Function]}
                            placeholder="Write your TODO"
                            type="text"
                  />
                  <input
                            id="btn-green"
                            onClick={[Function]}
                            type="submit"
                            value="Add"
                  />
        </div>,
                "className": "Body",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <ul
                      id="todo-holder"
        >
                      
        </ul>,
                    <input
                      id="todo-text-field"
                      onChange={[Function]}
                      placeholder="Write your TODO"
                      type="text"
        />,
                    <input
                      id="btn-green"
                      onClick={[Function]}
                      type="submit"
                      value="Add"
        />,
                  ],
                  "className": "todo-list",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [],
                      "id": "todo-holder",
                    },
                    "ref": null,
                    "rendered": Array [],
                    "type": "ul",
                  },
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "host",
                    "props": Object {
                      "id": "todo-text-field",
                      "onChange": [Function],
                      "placeholder": "Write your TODO",
                      "type": "text",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "input",
                  },
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "host",
                    "props": Object {
                      "id": "btn-green",
                      "onClick": [Function],
                      "type": "submit",
                      "value": "Add",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "input",
                  },
                ],
                "type": "div",
              },
              "type": "div",
            },
            Symbol(enzyme.__nodes__): Array [
              Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": <div
                    className="todo-list"
        >
                    <ul
                                id="todo-holder"
                    >
                                
                    </ul>
                    <input
                                id="todo-text-field"
                                onChange={[Function]}
                                placeholder="Write your TODO"
                                type="text"
                    />
                    <input
                                id="btn-green"
                                onClick={[Function]}
                                type="submit"
                                value="Add"
                    />
        </div>,
                  "className": "Body",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <ul
                        id="todo-holder"
        >
                        
        </ul>,
                      <input
                        id="todo-text-field"
                        onChange={[Function]}
                        placeholder="Write your TODO"
                        type="text"
        />,
                      <input
                        id="btn-green"
                        onClick={[Function]}
                        type="submit"
                        value="Add"
        />,
                    ],
                    "className": "todo-list",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": null,
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [],
                        "id": "todo-holder",
                      },
                      "ref": null,
                      "rendered": Array [],
                      "type": "ul",
                    },
                    Object {
                      "instance": null,
                      "key": null,
                      "nodeType": "host",
                      "props": Object {
                        "id": "todo-text-field",
                        "onChange": [Function],
                        "placeholder": "Write your TODO",
                        "type": "text",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "input",
                    },
                    Object {
                      "instance": null,
                      "key": null,
                      "nodeType": "host",
                      "props": Object {
                        "id": "btn-green",
                        "onClick": [Function],
                        "type": "submit",
                        "value": "Add",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "input",
                    },
                  ],
                  "type": "div",
                },
                "type": "div",
              },
            ],
            Symbol(enzyme.__options__): Object {
              "adapter": ReactSixteenAdapter {
                "options": Object {
                  "enableComponentDidUpdateOnSetState": true,
                },
              },
            },
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="category-todo"
          style={
                    Object {
                              "backgroundColor": "rgb(43, 186, 178)",
                            }
          }
/>,
        <input
          checked={false}
          className="todo-checkbox"
          label={false}
          onClick={[Function]}
          type="submit"
          value=""
/>,
        <p
          className="todo-text"
>
          ShallowWrapper {
                    "length": 1,
                    Symbol(enzyme.__root__): [Circular],
                    Symbol(enzyme.__unrendered__): <ToDo />,
                    Symbol(enzyme.__renderer__): Object {
                      "batchedUpdates": [Function],
                      "getNode": [Function],
                      "render": [Function],
                      "simulateEvent": [Function],
                      "unmount": [Function],
                    },
                    Symbol(enzyme.__node__): Object {
                      "instance": null,
                      "key": null,
                      "nodeType": "host",
                      "props": Object {
                        "children": <div
                          className="todo-list"
          >
                          <ul
                                          id="todo-holder"
                          >
                                          
                          </ul>
                          <input
                                          id="todo-text-field"
                                          onChange={[Function]}
                                          placeholder="Write your TODO"
                                          type="text"
                          />
                          <input
                                          id="btn-green"
                                          onClick={[Function]}
                                          type="submit"
                                          value="Add"
                          />
          </div>,
                        "className": "Body",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": null,
                        "nodeType": "host",
                        "props": Object {
                          "children": Array [
                            <ul
                              id="todo-holder"
          >
                              
          </ul>,
                            <input
                              id="todo-text-field"
                              onChange={[Function]}
                              placeholder="Write your TODO"
                              type="text"
          />,
                            <input
                              id="btn-green"
                              onClick={[Function]}
                              type="submit"
                              value="Add"
          />,
                          ],
                          "className": "todo-list",
                        },
                        "ref": null,
                        "rendered": Array [
                          Object {
                            "instance": null,
                            "key": null,
                            "nodeType": "host",
                            "props": Object {
                              "children": Array [],
                              "id": "todo-holder",
                            },
                            "ref": null,
                            "rendered": Array [],
                            "type": "ul",
                          },
                          Object {
                            "instance": null,
                            "key": null,
                            "nodeType": "host",
                            "props": Object {
                              "id": "todo-text-field",
                              "onChange": [Function],
                              "placeholder": "Write your TODO",
                              "type": "text",
                            },
                            "ref": null,
                            "rendered": null,
                            "type": "input",
                          },
                          Object {
                            "instance": null,
                            "key": null,
                            "nodeType": "host",
                            "props": Object {
                              "id": "btn-green",
                              "onClick": [Function],
                              "type": "submit",
                              "value": "Add",
                            },
                            "ref": null,
                            "rendered": null,
                            "type": "input",
                          },
                        ],
                        "type": "div",
                      },
                      "type": "div",
                    },
                    Symbol(enzyme.__nodes__): Array [
                      Object {
                        "instance": null,
                        "key": null,
                        "nodeType": "host",
                        "props": Object {
                          "children": <div
                            className="todo-list"
          >
                            <ul
                                              id="todo-holder"
                            >
                                              
                            </ul>
                            <input
                                              id="todo-text-field"
                                              onChange={[Function]}
                                              placeholder="Write your TODO"
                                              type="text"
                            />
                            <input
                                              id="btn-green"
                                              onClick={[Function]}
                                              type="submit"
                                              value="Add"
                            />
          </div>,
                          "className": "Body",
                        },
                        "ref": null,
                        "rendered": Object {
                          "instance": null,
                          "key": null,
                          "nodeType": "host",
                          "props": Object {
                            "children": Array [
                              <ul
                                id="todo-holder"
          >
                                
          </ul>,
                              <input
                                id="todo-text-field"
                                onChange={[Function]}
                                placeholder="Write your TODO"
                                type="text"
          />,
                              <input
                                id="btn-green"
                                onClick={[Function]}
                                type="submit"
                                value="Add"
          />,
                            ],
                            "className": "todo-list",
                          },
                          "ref": null,
                          "rendered": Array [
                            Object {
                              "instance": null,
                              "key": null,
                              "nodeType": "host",
                              "props": Object {
                                "children": Array [],
                                "id": "todo-holder",
                              },
                              "ref": null,
                              "rendered": Array [],
                              "type": "ul",
                            },
                            Object {
                              "instance": null,
                              "key": null,
                              "nodeType": "host",
                              "props": Object {
                                "id": "todo-text-field",
                                "onChange": [Function],
                                "placeholder": "Write your TODO",
                                "type": "text",
                              },
                              "ref": null,
                              "rendered": null,
                              "type": "input",
                            },
                            Object {
                              "instance": null,
                              "key": null,
                              "nodeType": "host",
                              "props": Object {
                                "id": "btn-green",
                                "onClick": [Function],
                                "type": "submit",
                                "value": "Add",
                              },
                              "ref": null,
                              "rendered": null,
                              "type": "input",
                            },
                          ],
                          "type": "div",
                        },
                        "type": "div",
                      },
                    ],
                    Symbol(enzyme.__options__): Object {
                      "adapter": ReactSixteenAdapter {
                        "options": Object {
                          "enableComponentDidUpdateOnSetState": true,
                        },
                      },
                    },
                  }
</p>,
      ],
      "className": "todo-item",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "className": "category-todo",
          "style": Object {
            "backgroundColor": "rgb(43, 186, 178)",
          },
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "checked": false,
          "className": "todo-checkbox",
          "label": false,
          "onClick": [Function],
          "type": "submit",
          "value": "",
        },
        "ref": null,
        "rendered": null,
        "type": "input",
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": ShallowWrapper {
            "length": 1,
            Symbol(enzyme.__root__): [Circular],
            Symbol(enzyme.__unrendered__): <ToDo />,
            Symbol(enzyme.__renderer__): Object {
              "batchedUpdates": [Function],
              "getNode": [Function],
              "render": [Function],
              "simulateEvent": [Function],
              "unmount": [Function],
            },
            Symbol(enzyme.__node__): Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="todo-list"
>
                  <ul
                                    id="todo-holder"
                  >
                                    
                  </ul>
                  <input
                                    id="todo-text-field"
                                    onChange={[Function]}
                                    placeholder="Write your TODO"
                                    type="text"
                  />
                  <input
                                    id="btn-green"
                                    onClick={[Function]}
                                    type="submit"
                                    value="Add"
                  />
</div>,
                "className": "Body",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <ul
                      id="todo-holder"
>
                      
</ul>,
                    <input
                      id="todo-text-field"
                      onChange={[Function]}
                      placeholder="Write your TODO"
                      type="text"
/>,
                    <input
                      id="btn-green"
                      onClick={[Function]}
                      type="submit"
                      value="Add"
/>,
                  ],
                  "className": "todo-list",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [],
                      "id": "todo-holder",
                    },
                    "ref": null,
                    "rendered": Array [],
                    "type": "ul",
                  },
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "host",
                    "props": Object {
                      "id": "todo-text-field",
                      "onChange": [Function],
                      "placeholder": "Write your TODO",
                      "type": "text",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "input",
                  },
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "host",
                    "props": Object {
                      "id": "btn-green",
                      "onClick": [Function],
                      "type": "submit",
                      "value": "Add",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "input",
                  },
                ],
                "type": "div",
              },
              "type": "div",
            },
            Symbol(enzyme.__nodes__): Array [
              Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": <div
                    className="todo-list"
>
                    <ul
                                        id="todo-holder"
                    >
                                        
                    </ul>
                    <input
                                        id="todo-text-field"
                                        onChange={[Function]}
                                        placeholder="Write your TODO"
                                        type="text"
                    />
                    <input
                                        id="btn-green"
                                        onClick={[Function]}
                                        type="submit"
                                        value="Add"
                    />
</div>,
                  "className": "Body",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <ul
                        id="todo-holder"
>
                        
</ul>,
                      <input
                        id="todo-text-field"
                        onChange={[Function]}
                        placeholder="Write your TODO"
                        type="text"
/>,
                      <input
                        id="btn-green"
                        onClick={[Function]}
                        type="submit"
                        value="Add"
/>,
                    ],
                    "className": "todo-list",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": null,
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [],
                        "id": "todo-holder",
                      },
                      "ref": null,
                      "rendered": Array [],
                      "type": "ul",
                    },
                    Object {
                      "instance": null,
                      "key": null,
                      "nodeType": "host",
                      "props": Object {
                        "id": "todo-text-field",
                        "onChange": [Function],
                        "placeholder": "Write your TODO",
                        "type": "text",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "input",
                    },
                    Object {
                      "instance": null,
                      "key": null,
                      "nodeType": "host",
                      "props": Object {
                        "id": "btn-green",
                        "onClick": [Function],
                        "type": "submit",
                        "value": "Add",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "input",
                    },
                  ],
                  "type": "div",
                },
                "type": "div",
              },
            ],
            Symbol(enzyme.__options__): Object {
              "adapter": ReactSixteenAdapter {
                "options": Object {
                  "enableComponentDidUpdateOnSetState": true,
                },
              },
            },
          },
          "className": "todo-text",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": [Function],
          "nodeType": "function",
          "props": [Function],
          "ref": undefined,
          "rendered": null,
          "type": [Function],
        },
        "type": "p",
      },
    ],
    "type": "li",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="category-todo"
            style={
                        Object {
                                    "backgroundColor": "rgb(43, 186, 178)",
                                  }
            }
/>,
          <input
            checked={false}
            className="todo-checkbox"
            label={false}
            onClick={[Function]}
            type="submit"
            value=""
/>,
          <p
            className="todo-text"
>
            ShallowWrapper {
                        "length": 1,
                        Symbol(enzyme.__root__): [Circular],
                        Symbol(enzyme.__unrendered__): <ToDo />,
                        Symbol(enzyme.__renderer__): Object {
                          "batchedUpdates": [Function],
                          "getNode": [Function],
                          "render": [Function],
                          "simulateEvent": [Function],
                          "unmount": [Function],
                        },
                        Symbol(enzyme.__node__): Object {
                          "instance": null,
                          "key": null,
                          "nodeType": "host",
                          "props": Object {
                            "children": <div
                              className="todo-list"
            >
                              <ul
                                                id="todo-holder"
                              >
                                                
                              </ul>
                              <input
                                                id="todo-text-field"
                                                onChange={[Function]}
                                                placeholder="Write your TODO"
                                                type="text"
                              />
                              <input
                                                id="btn-green"
                                                onClick={[Function]}
                                                type="submit"
                                                value="Add"
                              />
            </div>,
                            "className": "Body",
                          },
                          "ref": null,
                          "rendered": Object {
                            "instance": null,
                            "key": null,
                            "nodeType": "host",
                            "props": Object {
                              "children": Array [
                                <ul
                                  id="todo-holder"
            >
                                  
            </ul>,
                                <input
                                  id="todo-text-field"
                                  onChange={[Function]}
                                  placeholder="Write your TODO"
                                  type="text"
            />,
                                <input
                                  id="btn-green"
                                  onClick={[Function]}
                                  type="submit"
                                  value="Add"
            />,
                              ],
                              "className": "todo-list",
                            },
                            "ref": null,
                            "rendered": Array [
                              Object {
                                "instance": null,
                                "key": null,
                                "nodeType": "host",
                                "props": Object {
                                  "children": Array [],
                                  "id": "todo-holder",
                                },
                                "ref": null,
                                "rendered": Array [],
                                "type": "ul",
                              },
                              Object {
                                "instance": null,
                                "key": null,
                                "nodeType": "host",
                                "props": Object {
                                  "id": "todo-text-field",
                                  "onChange": [Function],
                                  "placeholder": "Write your TODO",
                                  "type": "text",
                                },
                                "ref": null,
                                "rendered": null,
                                "type": "input",
                              },
                              Object {
                                "instance": null,
                                "key": null,
                                "nodeType": "host",
                                "props": Object {
                                  "id": "btn-green",
                                  "onClick": [Function],
                                  "type": "submit",
                                  "value": "Add",
                                },
                                "ref": null,
                                "rendered": null,
                                "type": "input",
                              },
                            ],
                            "type": "div",
                          },
                          "type": "div",
                        },
                        Symbol(enzyme.__nodes__): Array [
                          Object {
                            "instance": null,
                            "key": null,
                            "nodeType": "host",
                            "props": Object {
                              "children": <div
                                className="todo-list"
            >
                                <ul
                                                    id="todo-holder"
                                >
                                                    
                                </ul>
                                <input
                                                    id="todo-text-field"
                                                    onChange={[Function]}
                                                    placeholder="Write your TODO"
                                                    type="text"
                                />
                                <input
                                                    id="btn-green"
                                                    onClick={[Function]}
                                                    type="submit"
                                                    value="Add"
                                />
            </div>,
                              "className": "Body",
                            },
                            "ref": null,
                            "rendered": Object {
                              "instance": null,
                              "key": null,
                              "nodeType": "host",
                              "props": Object {
                                "children": Array [
                                  <ul
                                    id="todo-holder"
            >
                                    
            </ul>,
                                  <input
                                    id="todo-text-field"
                                    onChange={[Function]}
                                    placeholder="Write your TODO"
                                    type="text"
            />,
                                  <input
                                    id="btn-green"
                                    onClick={[Function]}
                                    type="submit"
                                    value="Add"
            />,
                                ],
                                "className": "todo-list",
                              },
                              "ref": null,
                              "rendered": Array [
                                Object {
                                  "instance": null,
                                  "key": null,
                                  "nodeType": "host",
                                  "props": Object {
                                    "children": Array [],
                                    "id": "todo-holder",
                                  },
                                  "ref": null,
                                  "rendered": Array [],
                                  "type": "ul",
                                },
                                Object {
                                  "instance": null,
                                  "key": null,
                                  "nodeType": "host",
                                  "props": Object {
                                    "id": "todo-text-field",
                                    "onChange": [Function],
                                    "placeholder": "Write your TODO",
                                    "type": "text",
                                  },
                                  "ref": null,
                                  "rendered": null,
                                  "type": "input",
                                },
                                Object {
                                  "instance": null,
                                  "key": null,
                                  "nodeType": "host",
                                  "props": Object {
                                    "id": "btn-green",
                                    "onClick": [Function],
                                    "type": "submit",
                                    "value": "Add",
                                  },
                                  "ref": null,
                                  "rendered": null,
                                  "type": "input",
                                },
                              ],
                              "type": "div",
                            },
                            "type": "div",
                          },
                        ],
                        Symbol(enzyme.__options__): Object {
                          "adapter": ReactSixteenAdapter {
                            "options": Object {
                              "enableComponentDidUpdateOnSetState": true,
                            },
                          },
                        },
                      }
</p>,
        ],
        "className": "todo-item",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "className": "category-todo",
            "style": Object {
              "backgroundColor": "rgb(43, 186, 178)",
            },
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "checked": false,
            "className": "todo-checkbox",
            "label": false,
            "onClick": [Function],
            "type": "submit",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": ShallowWrapper {
              "length": 1,
              Symbol(enzyme.__root__): [Circular],
              Symbol(enzyme.__unrendered__): <ToDo />,
              Symbol(enzyme.__renderer__): Object {
                "batchedUpdates": [Function],
                "getNode": [Function],
                "render": [Function],
                "simulateEvent": [Function],
                "unmount": [Function],
              },
              Symbol(enzyme.__node__): Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": <div
                    className="todo-list"
>
                    <ul
                                        id="todo-holder"
                    >
                                        
                    </ul>
                    <input
                                        id="todo-text-field"
                                        onChange={[Function]}
                                        placeholder="Write your TODO"
                                        type="text"
                    />
                    <input
                                        id="btn-green"
                                        onClick={[Function]}
                                        type="submit"
                                        value="Add"
                    />
</div>,
                  "className": "Body",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <ul
                        id="todo-holder"
>
                        
</ul>,
                      <input
                        id="todo-text-field"
                        onChange={[Function]}
                        placeholder="Write your TODO"
                        type="text"
/>,
                      <input
                        id="btn-green"
                        onClick={[Function]}
                        type="submit"
                        value="Add"
/>,
                    ],
                    "className": "todo-list",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": null,
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [],
                        "id": "todo-holder",
                      },
                      "ref": null,
                      "rendered": Array [],
                      "type": "ul",
                    },
                    Object {
                      "instance": null,
                      "key": null,
                      "nodeType": "host",
                      "props": Object {
                        "id": "todo-text-field",
                        "onChange": [Function],
                        "placeholder": "Write your TODO",
                        "type": "text",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "input",
                    },
                    Object {
                      "instance": null,
                      "key": null,
                      "nodeType": "host",
                      "props": Object {
                        "id": "btn-green",
                        "onClick": [Function],
                        "type": "submit",
                        "value": "Add",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "input",
                    },
                  ],
                  "type": "div",
                },
                "type": "div",
              },
              Symbol(enzyme.__nodes__): Array [
                Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "host",
                  "props": Object {
                    "children": <div
                      className="todo-list"
>
                      <ul
                                            id="todo-holder"
                      >
                                            
                      </ul>
                      <input
                                            id="todo-text-field"
                                            onChange={[Function]}
                                            placeholder="Write your TODO"
                                            type="text"
                      />
                      <input
                                            id="btn-green"
                                            onClick={[Function]}
                                            type="submit"
                                            value="Add"
                      />
</div>,
                    "className": "Body",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <ul
                          id="todo-holder"
>
                          
</ul>,
                        <input
                          id="todo-text-field"
                          onChange={[Function]}
                          placeholder="Write your TODO"
                          type="text"
/>,
                        <input
                          id="btn-green"
                          onClick={[Function]}
                          type="submit"
                          value="Add"
/>,
                      ],
                      "className": "todo-list",
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": null,
                        "nodeType": "host",
                        "props": Object {
                          "children": Array [],
                          "id": "todo-holder",
                        },
                        "ref": null,
                        "rendered": Array [],
                        "type": "ul",
                      },
                      Object {
                        "instance": null,
                        "key": null,
                        "nodeType": "host",
                        "props": Object {
                          "id": "todo-text-field",
                          "onChange": [Function],
                          "placeholder": "Write your TODO",
                          "type": "text",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": "input",
                      },
                      Object {
                        "instance": null,
                        "key": null,
                        "nodeType": "host",
                        "props": Object {
                          "id": "btn-green",
                          "onClick": [Function],
                          "type": "submit",
                          "value": "Add",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": "input",
                      },
                    ],
                    "type": "div",
                  },
                  "type": "div",
                },
              ],
              Symbol(enzyme.__options__): Object {
                "adapter": ReactSixteenAdapter {
                  "options": Object {
                    "enableComponentDidUpdateOnSetState": true,
                  },
                },
              },
            },
            "className": "todo-text",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": [Function],
            "nodeType": "function",
            "props": [Function],
            "ref": undefined,
            "rendered": null,
            "type": [Function],
          },
          "type": "p",
        },
      ],
      "type": "li",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
